--- a/410ShopManagement/401UC/AppInteractButton.xaml
+++ b/410ShopManagement/401UC/AppInteractButton.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="_410ShopManagement._401UC.CloseButton"
+﻿<UserControl x:Class="_410ShopManagement._401UC.AppInteractButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,10 +9,9 @@
     <Button Width="35"
             Height="35" 
             Style="{StaticResource MaterialDesignIconButton}"
-            ToolTip="Close"
             BorderThickness="0"
             Click="Button_Click">
-        <materialDesign:PackIcon Kind="Power" Width="35" Height="35" Foreground="Red" VerticalAlignment="Center"/>
+        <materialDesign:PackIcon x:Name="icon" Kind="Power" Width="35" Height="35" Foreground="Red" VerticalAlignment="Center"/>
         <Button.Triggers>
             <EventTrigger RoutedEvent="Button.MouseEnter">
                 <BeginStoryboard>
